Compile / run with JDK17